// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowDefaultView should not render access selector or date picker if access condition is not required to select 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-up-0"
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      md={8}
      sm={8}
    >
      <ForwardRef(Typography)
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <TextField
        fullWidth={true}
        id="file-description-input-upload-0"
        inputProps={
          Object {
            "maxLength": 255,
          }
        }
        key="test.pdf"
        name="fileDescription"
        placeholder="Description"
        textFieldId="dsi-label-upload-0"
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-down-0"
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should not render embargo date picker if access condition is set to closed access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-up-0"
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <TextField
        fullWidth={true}
        id="file-description-input-upload-0"
        inputProps={
          Object {
            "maxLength": 255,
          }
        }
        key="test.pdf"
        name="fileDescription"
        placeholder="Description"
        textFieldId="dsi-label-upload-0"
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error={false}
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <ForwardRef(Input)
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value={1}
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-embargo-date-0"
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-down-0"
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-up-0"
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <TextField
        fullWidth={true}
        id="file-description-input-upload-0"
        inputProps={
          Object {
            "maxLength": 255,
          }
        }
        key="test.pdf"
        name="fileDescription"
        placeholder="Description"
        textFieldId="dsi-label-upload-0"
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error="This field is required"
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <ForwardRef(Input)
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value=""
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-embargo-date-0"
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-down-0"
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view for admin 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-up-0"
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <TextField
        fullWidth={true}
        id="file-description-input-upload-0"
        inputProps={
          Object {
            "maxLength": 255,
          }
        }
        key="test.pdf"
        name="fileDescription"
        placeholder="Description"
        textFieldId="dsi-label-upload-0"
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={4}
    >
      <PolicyDropdown
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        displayPrompt={true}
        errorText="This field is required"
        fieldLabel="Work level policy to apply to this PID"
        fieldName="test.pdf"
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        hideLabel={true}
        inheritedSecurity={5}
        input={
          Object {
            "autoFocus": false,
            "className": undefined,
            "disableUnderline": true,
            "onBlur": [Function],
            "onChange": undefined,
          }
        }
        policyDropdownId="dsi-security-policy-0"
        policyList={
          Array [
            Object {
              "id": 1,
              "label": "Administrators",
              "name": "Administrators",
              "order": 0,
              "value": 1,
            },
            Object {
              "id": 2,
              "label": "Theses Assessors",
              "name": "Theses Assessors",
              "order": 10,
              "value": 2,
            },
            Object {
              "id": 3,
              "label": "Evidence Assessors",
              "name": "Evidence Assessors",
              "order": 20,
              "value": 3,
            },
            Object {
              "id": 4,
              "label": "Staff and Students",
              "name": "Staff and Students",
              "order": 30,
              "value": 4,
            },
            Object {
              "id": 5,
              "label": "Public",
              "name": "Public",
              "order": 100,
              "value": 5,
            },
          ]
        }
        prompt="Select security policy"
        required={true}
        value=""
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-embargo-date-0"
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-down-0"
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view with styles 1`] = `
<FileUploadRowDefaultView
  accessConditionId={null}
  classes={
    Object {
      "error": "FileUploadRowDefaultView-error-7",
      "icon": "FileUploadRowDefaultView-icon-1",
      "placeholder": "FileUploadRowDefaultView-placeholder-5",
      "row": "FileUploadRowDefaultView-row-2",
      "securitySelector": "FileUploadRowDefaultView-securitySelector-4",
      "selected": "FileUploadRowDefaultView-selected-6",
      "selector": "FileUploadRowDefaultView-selector-3",
      "upDownArrow": "FileUploadRowDefaultView-upDownArrow-9",
      "upDownArrowContainer": "FileUploadRowDefaultView-upDownArrowContainer-8",
      "upDownArrowContainerBottom": "FileUploadRowDefaultView-upDownArrowContainerBottom-10",
    }
  }
  disabled={false}
  embargoDate="01/01/2017"
  index={0}
  locale={
    Object {
      "embargoDateClosedAccess": "No date required",
    }
  }
  name="test.pdf"
  onAccessConditionChange={[MockFunction]}
  onDelete={[MockFunction]}
  onEmbargoDateChange={[MockFunction]}
  requireOpenAccessStatus={true}
  size="100 MB"
/>
`;

exports[`Component FileUploadRowDefaultView should render embargo date picker if access condition is set to open access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-up-0"
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={2}
    >
      <ForwardRef(Typography)
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <TextField
        fullWidth={true}
        id="file-description-input-upload-0"
        inputProps={
          Object {
            "maxLength": 255,
          }
        }
        key="test.pdf"
        name="fileDescription"
        placeholder="Description"
        textFieldId="dsi-label-upload-0"
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      md={3}
      sm={3}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error={false}
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <ForwardRef(Input)
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value={5}
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
    >
      <WithStyles(FileUploadEmbargoDate)
        disabled={false}
        fileUploadEmbargoDateId="dsi-embargo-date-0"
        minDate={2017-06-29T14:00:00.000Z}
        onChange={[MockFunction]}
        value="01/01/2017"
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
    wrap="nowrap"
  >
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        data-analyticsid="new-file-upload-down-0"
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;
